# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(src/main.c)

PACKAGE=freetuxtv
VERSION=0.1.2
AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

AM_CONFIG_HEADER(config.h)

if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(FREETUXTV_DIR, "${ac_default_prefix}/share/freetuxtv", [Location of FreetuxTV files])
else
  AC_DEFINE_UNQUOTED(FREETUXTV_DIR, "${prefix}/share/freetuxtv", [Location of FreetuxTV files])
fi

# Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_INSTALL

# Arguments Libvlc
LIBVLC_ARGS=`vlc-config --libs external`
LIBVLC_ARGS="$LIBVLC_ARGS -lstdc++"

LIBVLC_DEPS=""

for i in $LIBVLC_ARGS ; do
if echo $i | grep -q "\/"; then
        j=`echo $i | sed -e 's/-l//g' -e 's/-L//g'`
        if [ test -e "$j" ]; then
                LIBVLC_DEPS="$LIBVLC_DEPS $i"
        else echo "Missing $j from libvlc deps ... removed"
        fi
else
        LIBVLC_DEPS="$LIBVLC_DEPS $i"
fi
done

# Checks for libraries.
PKG_CHECK_MODULES(DEPS, gtk+-2.0 >= 2.2
                        glib-2.0 >= 2.2
                        libglade-2.0 >= 2.6.2
                        dbus-glib-1 >= 0.74)

DEPS_LIBS="$DEPS_LIBS $LIBVLC_DEPS"

AC_SUBST(DEPS_CFLAGS)
AC_SUBST(DEPS_LIBS)

AC_CHECK_LIB(vlc, libvlc_new,,,$LIBVLC_DEPS)
AC_CHECK_LIB(sqlite3, sqlite3_open)
AC_CHECK_LIB(curl, curl_easy_init)
AC_CHECK_LIB(gthread-2.0, g_thread_init)
AC_CHECK_LIB(glade-2.0, glade_xml_new)

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(stdio.h string.h stdlib.h)

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_FUNC_MALLOC
AC_FUNC_REALLOC

# Checks for library functions.
AC_CHECK_FUNCS([strchr])
AC_CHECK_FUNCS([strcspn])

# Internationalization
GETTEXT_PACKAGE=$PACKAGE
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], ["${GETTEXT_PACKAGE}"], [gettext domain])

#IT_PROG_INTLTOOL([0.35.0])
ALL_LINGUAS="fr"
AM_GLIB_GNU_GETTEXT

AC_CONFIG_FILES([Makefile
                 po/Makefile.in
                 src/Makefile
                 data/Makefile
                 data/menu/Makefile
                 data/images/Makefile
                 data/images/channels/Makefile])

AC_OUTPUT
